{{$NEXT}}

0.012     2016-09-09 15:34:23 BST

  - Removed AutoPrereqs module.
  - Fixed up documentation to more closely reflect reality.

0.011     2016-06-21 14:27:15 BST

  - Fix cpanfile
  - Clean up unused bits

0.010     2016-06-21 14:05:16 BST

  - Replaced @Basic with @Starter
  - Used ConfigSlicer
  - And PluginRemover

0.009     2016-03-14 12:34:07 GMT

  - Created ToCPAN alternative, for releasing to CPAN proper

0.008     2015-11-19 13:43:47 GMT

  - No longer runs tests before release, because we use Jenkins for that
  - Recognises certain file extensions as binary

0.007     2015-11-16 14:47:23 GMT

  - Install executables from script/ and bin/

0.006     2015-11-09 12:11:43 GMT

  - Added missing dependency on Dist::Zilla::Plugin::Repository

0.005     2015-09-01 12:00:54 BST

  - Added PodWeaver as a dependency (oops)

0.004     2015-08-28 12:13:44 BST

  - Added PodWeaver plugin
  - Wove POD

0.003     2015-08-28 11:34:40 BST

  - Added Repository plugin
  - Fixed POD

0.002     2015-07-27 16:19:09 BST
  
  - Push git stuff after release
  - use @Author::ALTREUS

0.001     2015-07-24 18:10:19+01:00 Europe/London

  - Upload to local CPAN